# rag-learning-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
01-book-a-simple-guide-to-rag/chapter-03/: main.py  notebook.ipynb  what-i-learned.md
01-book-a-simple-guide-to-rag/chapter-04/: main.py  notebook.ipynb  what-i-learned.md
