[project]
name = "rag-learning-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.15.0",
    "faiss-cpu>=1.14.3",
    "html2text>=2025.4.15",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.1",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.2",
]
